src/main/java/com/example/citronix/web/errors/SuperficieException.java
package com.example.citronix.web.errors;

public class SuperficieException extends RuntimeException {
    public SuperficieException(String message) {
        super(message);
    }

}
